--- a/index.html
+++ b/index.html
@@ -424,74 +424,7 @@
                     margin: 20px 0;
                 }
 
-                .popup {
-                    display: none;
-                    position: fixed;
-                    top: 0;
-                    width: 100%;
-                    height: 100%;
-                    background-color: rgba(0, 0, 0, 0.32);
-                    justify-content: center;
-                    align-items: center;
-                    z-index: 1100;
-                }
 
-                .popup-content {
-                    background-color: white;
-                    padding: 20px;
-                    border-radius: 20px;
-                    text-align: left;
-                    max-width: 350px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: space-between;
-                }
-
-                .accept-terms-button,
-                .decline-terms-button {
-                    margin: 5px;
-                    padding: 12px 20px;
-                    border-radius: 20px;
-                    cursor: pointer;
-                    font-size: 0.9rem;
-                }
-
-                .accept-terms-button {
-                    background-color: var(--primary-color);
-                    color: white;
-                    border: none;
-                    transition: all 0.3s ease;
-                }
-
-                .decline-terms-button {
-                    background-color: var(--border-color);
-                    color: black;
-                    border: none;
-                }
-
-                .accept-terms-button:hover {
-                    background-color: #b73cfe;
-                }
-
-                .decline-terms-button:hover {
-                    background-color: rgb(215, 215, 215);
-                }
-
-                .legal-purposes {
-                    margin: 0;
-                    padding-left: 20px;
-                }
-
-                .popup-content a {
-                    background-color: #f0f0f0;
-                    padding: 3px;
-                    border-radius: 6px;
-                    text-decoration: none;
-                    transition: all 0.1s ease;
-                }
-                .popup-content a:hover {
-                    background-color: #e6e6e6;
-                }
 
                 .live-counter {
                     margin-top: 20px;
@@ -1075,6 +1008,47 @@
                     background-color: #F5F5F7;
                 }
 
+                .ratings-summary {
+                    background: white;
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+                    border-radius: 16px;
+                    border: 1px solid #cbd5e047;
+                    padding: 10px 20px;
+                    display: flex;
+                    flex-direction: column;
+                    height: 70px;
+                }
+
+                .rating-header {
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    margin-bottom: 24px;
+                }
+
+                .star-average {
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                }
+
+                .star {
+                    color: #ffe65b;
+                    position: relative;
+                    margin-bottom: 3px;
+                }
+
+                .average-number {
+                    font-size: 32px;
+                    font-weight: 600;
+                    color: var(--text-color);
+                }
+
+                .rating-subtext {
+                    color: #64748b;
+                    margin: 0 0 0 8px;
+                }
+
                 .reviews-grid {
                     display: grid;
                     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -1134,7 +1108,7 @@
                 }
 
                 .platform-logo {
-                    height: 30px;
+                    height: 35px;
                     width: auto;
                     opacity: 0.7;
                 }
@@ -1409,7 +1383,7 @@
                 }
 
                 .get-started-button {
-                    width: 190px;
+                    width: 220px;
                     height: 50px;
                     border-radius: 45px;
                     transition: all 0.3s;
@@ -1489,7 +1463,7 @@
 
                     .count {
                         display: flex;
-                        align-items: center;
+                        align-items: right;
                         height: 40px;
                         margin: 0;
                     }
@@ -1582,6 +1556,7 @@
         <script async="async" src="/consent.js"></script>
         </script>
         <body>
+
             <div class="navbar">
                 <div class="text-logo">
                     <a href="/" class="logo-link">
@@ -1635,32 +1610,7 @@
                 </div>
             </div>
 
-            <div class="popup" id="legalPopup">
-                <div class="popup-content">
-                    <div>
-                        <h2>🍪 Cookies</h2>
-                        <p>To proceed, you need to agree to our
-                            <a href="/terms-of-use.html" style="color: var(--text-color);">Terms of Use</a>
-                            and
-                            <a
-                                href="/privacy-policy.html"
-                                onclick="event.preventDefault();"
-                                style="color: var(--text-color);">Privacy Policy</a>
-                            <br>
-                            <div class="whitespace"></div>
 
-                            <strong>Purposes:</strong>
-                            <ul class="legal-purposes">
-                                <li>Functionality</li>
-                                <li>Analytics</li>
-                            </ul>
-                        </p>
-                        <div class="whitespace"></div>
-                    </div>
-                    <button onclick="closePopup()" class="decline-terms-button">Decline</button>
-                    <button onclick="acceptDisclaimer()" class="accept-terms-button">Accept and Continue</button>
-
-                </div>
             </div>
         </div>
 
@@ -2055,12 +2005,13 @@
     <h2 class="section-title">Try it out!</h2>
     <p class="white-p">Now you know everything about our service. Give it a try!</p>
     <!-- From Uiverse.io by SteveBloX -->
-    <a href="/new.html" class="get-started-button">Get Started</a>
+    <a href="/new.html" class="get-started-button">Create Mind Map</a>
 </div>
 <div class="roadmap-container">
 
     <div class="reviews-section">
         <h2 class="section-title">What Our Users Say</h2>
+
         <div class="reviews-grid">
 
             <div class="review-card">
@@ -2097,6 +2048,28 @@
                 </div>
             </div>
 
+            <div class="review-card">
+                <div class="review-header">
+                    <img src="/img/reviews/no-picture.jpg" alt="User Avatar" class="review-avatar">
+                    <div class="review-meta">
+                        <span class="review-username">Anonymous</span>
+                    </div>
+                </div>
+                <p class="review-text">I love it. It's free, it helps me as I am unable to pay. I can also edit the map which makes it amazing as it feels like I can make my personal vision board here. Thanks to whoever came up with such ingenious idea. Cherry on top, I don't even need an account</p>
+                <div class="review-platform">
+                    <img src="/img/reviews/5-Stars.jpg" alt="Reddit" class="platform-logo">
+                </div>
+            </div>
+        </div>
+        <div class="ratings-summary">
+            <div class="star-average">
+                <svg class="star" viewBox="0 0 24 24" width="35" height="35">
+                    <path d="M12 2.5c.3-.6 1.7-.6 2 0l2.2 5c.2.4.6.7 1 .8l5.5.8c.7 0 1 .9.5 1.4l-4.2 3.8c-.3.3-.5.8-.4 1.2l1 5.4c.1.7-.6 1.2-1.2.9l-4.9-2.9c-.4-.2-.9-.2-1.3 0l-4.9 2.9c-.6.3-1.3-.2-1.2-.9l1-5.4c.1-.4-.1-.9-.4-1.2l-4.2-3.8c-.5-.5-.2-1.4.5-1.4l5.5-.8c.4-.1.8-.4 1-.8l2.2-5z" fill="#ffe65b" stroke="none"/>
+                </svg>
+                <span class="average-number">4.0</span>
+                <p class="rating-subtext">70 Ratings.</p>
+
+            </div>
         </div>
 
     </div>
@@ -2218,7 +2191,6 @@ class="launch-platform-badge"></a>
 
 function generateMindmap() {
 console.log("generateMindmap called");
-if (localStorage.getItem('disclaimerAccepted')) {
     const query = document
         .getElementById('prompt')
         .value;
@@ -2228,9 +2200,6 @@ if (localStorage.getItem('disclaimerAccepted')) {
     } else {
         console.log("Query is empty or undefined");
     }
-} else {
-    showPopup();
-}
 }
 
 $(document).on('keypress', function (event) {
@@ -2384,8 +2353,7 @@ e.preventDefault();
 submitButton.textContent = 'Sending...';
 submitButton.disabled = true;
 
-const scriptURL = "https://script.google.com/macros/s/AKfycbzL8UZSKef1HztYFa6HeNz7bgVQfX2U-_wR6d3" +
-        "mTiklA1noVVmeb0BuEdbw7blZ0r8S/exec";
+const scriptURL = "https://post.mindmapwizard.com";
 const formData = new FormData(form);
 
 fetch(scriptURL, {
@@ -2451,10 +2419,6 @@ const categories = [
             ' 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4' +
             '.5 1.253'
 }, {
-    name: 'Philosophy',
-    color: '#8e44ad',
-    path: 'M21 12a9 9 0 11-18 0 9 9 0 0118 0z M9 10h.01M15 10h.01M9.75 15h4.5'
-}, {
     name: 'Biology',
     color: '#2ecc71',
     path: 'M12 10a6 6 0 0 0 -6 -6h-3v2a6 6 0 0 0 6 6h3 M12 14a6 6 0 0 1 6 -6h3v1a6 6 0 0 ' +
@@ -2469,6 +2433,10 @@ const categories = [
     path: 'M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 ' +
             '0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2' +
             'h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z'
+}, {
+    name: 'Philosophy',
+    color: '#8e44ad',
+    path: 'M21 12a9 9 0 11-18 0 9 9 0 0118 0z M9 10h.01M15 10h.01M9.75 15h4.5'
 }, {
     name: 'Technology',
     color: '#2980b9',
